package service

import (
	"context"
	"mail2calendar/internal/domain/calendar/proto"
)

type CalendarService interface {
	CreateEvent(ctx context.Context, req *proto.NewCreateEventRequest) (*proto.CreateEventResponseV2, error)
	GetEvent(ctx context.Context, req *proto.GetEventRequestV2) (*proto.GetEventResponseV2, error)
	ProcessEmailToCalendar(ctx context.Context, emailContent string) (*proto.CreateEventResponseV2, error)
}

type calendarService struct {
	// Add dependencies here
}

func NewCalendarService() CalendarService {
	return &calendarService{}
}

func (s *calendarService) CreateEvent(ctx context.Context, req *proto.NewCreateEventRequest) (*proto.CreateEventResponseV2, error) {
	// TODO: Implement
	return &proto.CreateEventResponseV2{
		EventID: "test-id",
	}, nil
}

func (s *calendarService) GetEvent(ctx context.Context, req *proto.GetEventRequestV2) (*proto.GetEventResponseV2, error) {
	// TODO: Implement
	return &proto.GetEventResponseV2{
		Event: &proto.Event{
			Id: req.EventID,
		},
	}, nil
}

func (s *calendarService) ProcessEmailToCalendar(ctx context.Context, emailContent string) (*proto.CreateEventResponseV2, error) {
	// TODO: Implement email processing logic
	return &proto.CreateEventResponseV2{
		EventID: "processed-id",
	}, nil
}
